# claudestream

./: .gitignore  CHANGELOG.md  CLAUDE.md  README.md  package-lock.json  package.json  pyproject.toml  selfdoc.json
.rlsbl/: config.json  hashes.json  managed-files.json
.selfdoc/: manifest.json
.strictcli/: schema.json
claudestream/: __init__.py  _agent.py  _async_session.py  _cli.py  _color.py  _options.py  _process.py  _protocol.py  _sync_session.py  _tools.py  events.py  messages.py  policy.py
docs/: _CLAUDE.md  _README.md  claudestream-_agent.md  claudestream-_async_session.md  claudestream-_cli.md  claudestream-_color.md  claudestream-_options.md  claudestream-_process.md  claudestream-_protocol.md  claudestream-_sync_session.md  claudestream-_tools.md  claudestream-events.md  claudestream-messages.md  claudestream-policy.md  claudestream.md  cli-agent.md  cli-ask.md  cli-config.md  cli-doctor.md  cli-events.md  cli-index.md  cli-repl.md  cli-send.md  cli-stream.md  gen-index.md  index.md
scripts/: probe_user_dialogs.py  test_e2e_tool.py  test_mcp_protocol_v8.py
tests/: conftest.py  test_agent.py  test_ask.py  test_auth_interception.py  test_budget.py  test_cancellation.py  test_cli_commands.py  test_cli_error_handling.py  test_cli_event_coverage.py  test_color.py  test_control_methods.py  test_control_requests.py  test_dedup.py  test_dialogs.py  test_events.py  test_file_tracking.py  test_footer.py  test_hooks.py  test_integration.py  test_liveness.py  test_mandatory_flags.py  test_mcp_handshake_integration.py  test_mcp_tools.py  test_messages.py  test_model_display.py  test_observability.py  test_options.py  test_policy.py  test_process.py  test_protocol_io.py  test_sandbox.py  test_session_properties.py  test_session_resumption.py  test_stdin_flag.py  test_sync_session_internals.py  test_system_prompt.py  test_tools.py  test_transparent_retry.py  test_yield_all_events.py
todo/: agent-definition-toolkit.md  bare-flag-breaks-cli-auth.md  bare-parameter.md  claudewheel-integration.md  cleanup-pytest-session-artifacts.md  custom-tool-registration.md  dijkstra-integration-needs.md  discover-agents-custom-paths.md  mcp-server-registration.md  mcp-set-servers-handshake.md  mcp-tool-registration-not-working.md  migration-error-nonexistent-guide.md  (+11 more)
(+70 files in other folders)
