[project]
name = "claudestream"
version = "0.4.0"
description = "A Python library and CLI for streaming Claude Code's JSON protocol"
requires-python = ">=3.11"
license = "MIT"
authors = [{name = "SMM-H", email = "lisa.codi@veliu.com"}]
dependencies = [
    "strictcli>=0.8.6",
    "selfdoc",
    "claudewheel",
]
keywords = ["rlsbl"]

[project.scripts]
claudestream = "claudestream._cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = ["pytest"]
