[project]
name = "claudestream"
version = "0.9.0"
description = "A Python library and CLI for streaming Claude Code's JSON protocol"
requires-python = ">=3.11"
license = "MIT"
authors = [{name = "SMM-H", email = "lisa.codi@veliu.com"}]
dependencies = [
    "strictcli",
    "msgspec",
    "selfdoc",
    "claudewheel",
]
keywords = ["rlsbl"]

[project.scripts]
claudestream = "claudestream._cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
markers = ["integration: tests that require a real claude CLI and authentication"]

[dependency-groups]
dev = [
    "pytest",
    "pytest-timeout>=2.4.0",
]
