[project]
name = "claudestream"
version = "0.9.0"
description = "A Python library and CLI for streaming Claude Code's JSON protocol"
requires-python = ">=3.11"
license = "MIT"
authors = [{name = "SMM-H", email = "lisa.codi@veliu.com"}]
dependencies = [
    "strictcli",
    "msgspec",
    "selfdoc",
    "claudewheel",
    "psutil",
]
keywords = ["rlsbl"]

[project.scripts]
claudestream = "claudestream._cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
markers = [
    "integration: tests that require a real claude CLI and authentication",
    "slow: tests that take >10s (e.g. subprocess liveness probes)",
]

[dependency-groups]
dev = [
    "pytest",
    "pytest-timeout>=2.4.0",
]

[tool.uv.sources]
strictcli = { path = "/home/m/Projects/strictcli/python", editable = true }
selfdoc = { path = "/home/m/Projects/selfdoc", editable = true }
claudewheel = { path = "/home/m/Projects/claudewheel", editable = true }
